--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,7 +1,12 @@
 
 .container{
-  width: 90%;
-  margin: 75px auto;
+  width: 100%;
+  margin: 3.75% auto;
   padding: 0;
-  border: 1px solid red;
+}
+
+.information-section{
+  display: flex;
+  justify-content: space-between ;
+  align-items: center;
 }
